assets/k8s/simple-http-server.yaml
# Example service deploymet config.
# Replace `$DOMAIN` with a domain name that is forwarded to the k8s instance.

# --- Deployment ---
# A pod defines what to run (like a docker container). A deployment defines how to create pods.
# For example, you can specify always keep 3 pods running so even if one fails a different pod can serve requests.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-server-deployment
  labels:
    app: http-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-server
  template:
    metadata:
      labels:
        app: http-server
    spec:
      containers:
        - name: nginx
          image: nginx:latest # A simple Nginx web server image
          ports:
            - containerPort: 80

---
# --- Service ---
# Service defines how people can reach your pods.
# After creating a service other people don't need to care about how many pods you have running. They always send request to service.
apiVersion: v1
kind: Service
metadata:
  name: http-server-service
spec:
  selector:
    app: http-server # This must match the labels on the pods
  ports:
    - protocol: TCP
      port: 80 # The port the Service will listen on
      targetPort: 80 # The port on the pods to forward traffic to

---
# --- Ingress ---
# Ingress defines that if a request comes from internet how to handle it.
# Basically which service should the request be sent to
#
#
# This Ingress is for HTTP version of site.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-server-ingress-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  # Specify that Traefik should handle this Ingress
  ingressClassName: traefik
  rules:
    - host: $DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http-server-service # Must match the Service name above
                port:
                  number: 80 # Must match the Service port above
---
# This Ingress is for HTTPS (TLS) version of site.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-server-ingress-tls
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  # Specify that Traefik should handle this Ingress
  ingressClassName: traefik
  tls:
    - hosts:
        - $DOMAIN
  rules:
    - host: $DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http-server-service # Must match the Service name above
                port:
                  number: 80 # Must match the Service port above
